update correction html

--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -377,7 +377,7 @@
             <div class="col-md-4">
               <span class="badge bg-dark mb-2">Best Offer</span>
               <h2 class="fw-bold display-5">
-                New Era, Netlix, Stranger Things
+                New Era, Netflix, Stranger Things
               </h2>
               <div class="mb-2">
                 <span class="font-monospace">Dal 10/07/2024 al 17/07/2024</span>
