--- a/FE-U2-S2-L2-Esercizio.html
+++ b/FE-U2-S2-L2-Esercizio.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <!-- Navbar -->
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary p-3 sticky-top">
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary p-3">
         <div class="container">
           <a class="navbar-brand" href="#Home">
             <img src="assets/NewEra.png" alt="logo" style="width: 100px" />
@@ -548,9 +548,16 @@
     <footer class="bg-dark text-white py-4 mt-5">
       <div class="container">
         <div class="row align-items-center text-center text-md-start">
-          <div class="col-12 col-md-8 mb-3 mb-md-0">
+          <div
+            class="col-12 col-md-4 mb-3 mb-md-0 d-flex flex-column align-items-center align-items-md-start"
+          >
             <strong>New Era</strong><br />
             Email: info@newera.it
+          </div>
+          <div
+            class="col-12 col-md-4 mb-3 mb-md-0 d-flex justify-content-center"
+          >
+            <img src="assets/NewEra2.png" alt="New Era" style="width: 300px" />
           </div>
           <div class="col-12 col-md-4 text-center text-md-end">
             <a
